fix: Add classname to some elements

--- a/src/components/career/CareerHero/CareerHero.module.scss
+++ b/src/components/career/CareerHero/CareerHero.module.scss
@@ -28,43 +28,43 @@
 .imageContainer {
     width: 100%;
 
-    // img {
-    //     @include img_fluid;
-    //     transform: translateY(-1rem);
-    // }
+    .topImg {
+        @include img_fluid;
+        transform: translateY(-1rem);
+    }
 }
 
 .headingContainer {
     gap: 1rem;
     margin-top: 3.125rem;
 
-    // p {
-    //     margin-top: -0.5rem;
-    // }
+    .careerTopParagraph {
+        margin-top: -0.5rem;
+    }
 }
 
-// h1, h4 {
-//     font-weight: 700;
-//     line-height: 160%;
-//     color: #333333;
-// }
+.careerHeadingOne, .careerHeadingFour {
+    font-weight: 700;
+    line-height: 160%;
+    color: #333333;
+}
 
-// h1 {
-//     font-size: 2.125rem;
-// }
+.careerHeadingOne {
+    font-size: 2.125rem;
+}
 
-// h4 {
-//     font-size: 1.125rem;
-// }
+.careerHeadingFour {
+    font-size: 1.125rem;
+}
 
-// p {
-//     font-weight: 400;
-//     font-size: 0.875rem;
-//     line-height: 120%;
-//     color: #333333;
-// }
+.careerTopParagraph {
+    font-weight: 400;
+    font-size: 0.875rem;
+    line-height: 120%;
+    color: #333333;
+}
 
-.btn {
+.careerBtn {
     padding: 0.875rem;
     background: #714DD9;
     border-radius: 0.5rem;
@@ -89,24 +89,24 @@
     background: #FFFFFF;
     border-radius: 1rem;
 
-    // img {
-    //     @include img_fluid;
-    //     margin-bottom: 1.5rem;
-    //     width: 4.5rem;
-    //     height: 4.5rem;
-    // }
+    .cardImg {
+        @include img_fluid;
+        margin-bottom: 1.5rem;
+        width: 4.5rem;
+        height: 4.5rem;
+    }
 
-    // p {
-    //     font-size: 1rem;
-    // }
+    .careerCardParagraph {
+        font-size: 1rem;
+    }
 
 }
 
-// .card:nth-child(2){
-//     // h4 {
-//     //     width: 70%;
-//     // }
-// }
+.card:nth-child(2){
+    .careerHeadingFour {
+        width: 70%;
+    }
+}
 
 // Small devices (landscape phones, 430px and up)
 
@@ -116,10 +116,10 @@
         max-width: 75%;
     }
 
-    // .card {
-    //     padding: 2rem 1.5rem;
-    //     max-width: 60%;    
-    // }
+    .card {
+        padding: 2rem 1.5rem;
+        max-width: 60%;    
+    }
 
 }
 
@@ -127,13 +127,13 @@
 
 @media screen and (min-width: 36rem) {
 
-    // h1 {
-    //     font-size: 3.25rem;
-    // }
+    .careerHeadingOne {
+        font-size: 3.25rem;
+    }
     
-    // h4 {
-    //     font-size: 1.375rem;
-    // }
+    .careerHeadingFour {
+        font-size: 1.375rem;
+    }
 
     .card {
         padding: 2rem 1.5rem;
@@ -156,32 +156,35 @@
         padding: 1rem;
     }
 
-    // .imageContainer {
+    .imageContainer {
     
-    //     // img {
-    //     //     @include img_fluid;
-    //     // }
-    // }
+        .topImage {
+            @include img_fluid;
+        }
+    }
 
     .headingContainer {
         width: 70%;
     }
 
-    // h1, h4, p {
-    //     color: #060C22;
-    // }
+    .careerHeadingOne, 
+    .careerHeadingFour, 
+    .careerTopParagraph,
+    .careerCardParagraph {
+        color: #060C22;
+    }
 
-    // h1 {
-    //     font-size: 3.25rem;
-    // }
+    .careerHeadingOne {
+        font-size: 3.25rem;
+    }
     
-    // h4 {
-    //     font-size: 1.375rem;
-    // }
+    .careerHeadingFour {
+        font-size: 1.375rem;
+    }
 
-    // p {
-    //     font-size: 1rem;
-    // }
+    .careerTopParagraph {
+        font-size: 1rem;
+    }
 
     .cardContainer {
         flex-flow: row nowrap;
@@ -247,13 +250,13 @@
         max-width: 50rem;
     }
 
-    // h1 {
-    //     font-size: 3.8125rem;
-    // }
+    .careerHeadingOne {
+        font-size: 3.8125rem;
+    }
     
-    // h4 {
-    //     font-size: 1.5625rem;
-    // }
+    .careerHeadingFour {
+        font-size: 1.5625rem;
+    }
 
     .cardContainer {
         width: 75%;
