feat(TEA-114): Added New Task page

--- a/src/components/NewTask/Sidebar.module.scss
+++ b/src/components/NewTask/Sidebar.module.scss
@@ -14,7 +14,7 @@ $btnPurple: #714DD9;
     border-right: 1px solid $textLightMode;
     padding: 2rem 3rem;
 
-    & > img{
+    & > .newTaskImg{
         // width: 80%;
         width: 10vw;
     }
