feat: signup page

--- a/src/components/landing-page/hero-section/hero.module.scss
+++ b/src/components/landing-page/hero-section/hero.module.scss
@@ -31,14 +31,14 @@
   padding: 0 1.25rem;
 }
 
-p {
-  color: $blackText !important;
-}
+// p {
+//   color: $blackText !important;
+// }
 
-h1,
-h2 {
-  color: $black !important;
-}
+// h1,
+// h2 {
+//   color: $black !important;
+// }
 
 .hero__icon1 {
   position: absolute;
