--- a/src/components/ProfileScreen/NavSidebar.module.scss
+++ b/src/components/ProfileScreen/NavSidebar.module.scss
@@ -19,14 +19,13 @@ body {
 }
 
 .sidecon1 {
-    margin-top: 1.5rem;
-    margin-left: 2.5rem;
+    padding-top: 2.5rem;
+    padding-left: 2.5rem;
 }
 
 .logo {
     width: 129px;
     height: 33px;
-    padding-bottom: 3.25rem;
 }
 
 .sidecon2 {
@@ -35,6 +34,7 @@ body {
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    padding-top: 2.5rem;
 }
 
 .arrow {
@@ -46,8 +46,7 @@ body {
     font-family: 'Open Sans';
     font-style: normal;
     font-weight: 600;
-    font-size: 0.875rem;
-    line-height: 160%;
+    font-size: 1rem;
     color: #714DD9;
 }
 
@@ -58,6 +57,106 @@ body {
     } 
 }
 
+/*Mobile side Menu Button */
+
+.sidemob {
+    width: 250px;
+    height: 100vh;
+    background: #F6FAFB;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
+}
+
+.sidemob2 {
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding-top: 2.5rem;
+    gap: 0.25rem;
+    padding-left: 3rem;
+    padding-bottom: 1.75rem;
+}
+
+.sidemob2 h2 {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 600;
+    font-size: 1rem;
+    color:  #333333;
+}
+
+.rightarrow1 {
+    width: 20px;
+    height: 20px;
+    transform: rotate(-180deg);
+}
+
+.sidemob3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    padding-left: 3rem;
+    padding-bottom: 1.75rem;
+}
+
+.sidemob3 p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 120%;
+}
+
+.rightarrow2 {
+    transform: matrix(0, -1, -1, 0, 0, 0);
+}
+
+.sidemob4p1 {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 120%;
+    color: #333333;  
+    padding-left: 3rem;
+    padding-bottom: 1.75rem;
+}
+
+.sidemob4p2 {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 120%;
+    color: #714DD9;
+    padding-left: 3rem;
+    padding-bottom: 1.75rem;
+}
+
+.logoutmob {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 0.5rem;
+    padding-left: 3rem;
+}
+
+.logoutmob p {
+    font-family: 'Open Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    color: #FF4D4F;
+}
+
+.logout {
+    width: 1.5rem;
+    height: 1.5rem;
+}
 /* Nav Bar */
 
 .navcon {
@@ -66,7 +165,7 @@ body {
     justify-content: space-between;
     align-items: center;
     padding: 0px 40px;
-    width: calc(100% - 330px);
+    width: calc(100% - 250px);
     margin-left: 250px;
     height: 64px;
     background: #F6FAFB;
@@ -88,6 +187,8 @@ body {
     font-size: 1.25rem;
     line-height: 100%;
     color: #333333;
+    padding-top: 1.375rem;
+    padding-bottom: 1.125rem;
 }
 
 .navborder {
@@ -95,8 +196,6 @@ body {
     width: 98px;
     height: 4px;
     background: #714DD9;
-    position: relative;
-    top: 0.5rem;
 }
 
 .avatar {
@@ -116,7 +215,7 @@ body {
     text-align: center;
     color: #FFFFFF;
     position: relative;
-    top: -0.5rem;
+    top: 0.25rem;
 }
 
 .navcon2 {
@@ -162,7 +261,8 @@ a {
     display: flex;
     flex-direction: row;
     align-items: center;
-    width: 14.5rem;
+    width: 11.5rem;
+    padding-bottom: 15.5px;
     border-bottom: 0.5px solid #D3D0D9;
     gap: 0.5rem;
 }
@@ -185,7 +285,9 @@ a {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 14.5rem;
+    width: 11.5rem;
+    padding-top: 12px;
+    padding-bottom: 12px;
     border-bottom: 0.5px solid #D3D0D9;
 }
 
@@ -201,8 +303,6 @@ a {
 .rightarrow {
     width: 1rem;
     height: 1rem;
-    position: relative;
-    top: 0.8rem;
 }
 
 .logoutcon {
@@ -210,6 +310,7 @@ a {
     flex-direction: row;
     align-items: center;
     gap: 0.5rem;
+    padding-top: 12px;
 }
 
 .logoutcon p {
