--- a/src/components/VA-modal/Va1.module.scss
+++ b/src/components/VA-modal/Va1.module.scss
@@ -1,20 +1,21 @@
-@import "../../scss/variables";
-
-/* The following line can be included in a src/App.scss */
-
-/* @import "~bootstrap/scss/bootstrap"; */
+@import "../../scss/variables"; 
 
 
-
-body_modal{
-
+.body_modal{
+    /* bgc when modal is open */
     background: linear-gradient(118.85deg, #808080 -6.3%, rgba(128, 128, 128, 0.852756) -6.3%, rgba(128, 128, 128, 0.360016) -0.46%, rgba(128,128,128, 0) 98.73%);
+    height: 100%;
+    padding: 7.5rem 0 3rem; 
+    width: max-width;
 }
 
+
+/*MODAL STYLES */ 
 .va_main{
     border-radius: 24px;
     background-color: #fff;
-    margin:7.5rem 5.5rem 3rem 16.9375rem;
+    /* margin-left: 16.9375rem; 
+    margin:0 5.5rem 0 1.3125rem;*/
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -24,8 +25,9 @@ body_modal{
     z-index: 1000;
 }
 
+
+
 .cancel_button{
-    /* // padding: 0.125rem; */
     align-self: flex-end;
 }
 
@@ -46,6 +48,7 @@ body_modal{
 .talking_text{
     text-align: center;
     color: #333;
+    padding-inline: 2rem;
 }
 
 .talking_text h4{
@@ -105,12 +108,15 @@ body_modal{
 
 @media (max-width: 481px){
 
-    body{
+    .body_modal{
         background: #f6fafb;
+        padding: 1rem 0;
     }
+
    .va_main{
        border-radius: 13.7103px;
-       margin:1.6875rem 0.625rem  3.75rem;
+     /*margin:1.6875rem 0.625rem  3.75rem; */
+       margin:0 0.625rem  3.75rem;
        padding: 1.1875rem 1.25rem;
 
     }
@@ -155,6 +161,15 @@ body_modal{
 }
 
 @media (min-width:481px) and (max-width: 769px){
+    .va_main{
+    margin-inline:auto;
+    width: 80%;
+    }
+
+    .talking_text{
+        padding-inline: 1.5rem;
+    }
+
     .talking_btns{
         width: fit-content;
     }
@@ -167,16 +182,41 @@ body_modal{
 @media (min-width: 481px) and (max-width: 1025px){
     .va_main{
         margin-inline: auto;
+        padding-inline: 1.5rem;
         width: 85%;
     }
 }
 
  @media (min-width: 769px) and (max-width:1025px){
     .va_main{
-    width: 90.84%;
-    margin: 3.5rem 0 3rem 1.3125rem;
+      /*  width: 60.84%; */
+   /* margin: 3.5rem 0 3rem 17.3125rem; */
+    }
+
+    .talking_text{
+        padding: 0 1.7rem;
+    }
+
+    .talking_btns{
+        width:65%;
+    }
+
+    .talking_btns button:first-of-type{
+        margin-right: 1rem;
     }
  }
+
+@media (min-width: 1200px) {
+  .talking_text{
+    padding: 0 11.1875rem;  
+    } 
+
+    .va_main{ 
+    margin:0 5.5rem 0 1.6rem;
+    width: auto; 
+//    width: 67.5625rem; 
+    }
+}
 
 @media (min-width: 2560px){
     .talking_text p{
