refactor: refactor couple pages

--- a/src/components/resetPassword and newPassword pages/ResetPassword.module.scss
+++ b/src/components/resetPassword and newPassword pages/ResetPassword.module.scss
@@ -3,8 +3,8 @@
   display: flex;
   justify-content: center;
   min-height: 100vh;
-//   display: grid;
-//   grid-template-columns: 50% 50%;
+  //   display: grid;
+  //   grid-template-columns: 50% 50%;
 }
 
 .content > img {
@@ -62,37 +62,35 @@
     width: 100% !important;
   }
 
-  img{
-    margin-right: 1rem  ;
+  img {
+    margin-right: 1rem;
   }
-
 }
 
-.inputDiv{
-  box-sizing: border-box !important;
-  border-radius: 0.75rem;
-  border: 1px solid #d3d0d9;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
+.inputDiv {
+  // box-sizing: border-box !important;
+  // border-radius: 0.75rem;
+  // border: 1px solid #d3d0d9;
+  // background-color: white;
+  // display: flex;
+  // justify-content: space-between;
+  // align-items: center;
+  // padding: 1rem;
 
-  
-
-  img{
-    margin-right: 1rem  ;
+  img {
+    margin-right: 1rem;
   }
 
-
   input {
-  
-    outline: none;
-    padding: 0 !important;
-    margin: 0 !important;
-    background-color: transparent;
-    border: 0;
-    width: auto !important;
+    width: 100%;
+    // padding: 1rem;
+
+    // outline: none;
+    // padding: 0 !important;
+    // margin: 0 !important;
+    // background-color: transparent;
+    // border: 0;
+    // width: auto !important;
   }
 }
 
@@ -111,7 +109,7 @@
     font-size: 0.75rem;
   }
   span.green {
-    color: #52C41A;
+    color: #52c41a;
     font-size: 0.75rem;
   }
 }
