Refactor: refactor landing-page code base

--- a/src/components/landing-page/happy-client/happyClientCard.module.scss
+++ b/src/components/landing-page/happy-client/happyClientCard.module.scss
@@ -32,6 +32,7 @@ p {
   border: 1px solid lightgrey;
   width: 276px;
   height: 383px;
+  margin: 0 auto;
   background-color: #fcfcff;
   border-radius: 8px;
   padding: 24px 25px;
