--- a/src/components/landing-page/gift/Gift.module.scss
+++ b/src/components/landing-page/gift/Gift.module.scss
@@ -37,12 +37,16 @@
       }
     }
     p {
-      font-size: 1.2rem;
+      font-size: 1rem;
       font-weight: 400;
       line-height: 140%;
       text-align: center;
       color: #707070;
       margin: 20px 0 2rem;
+      @media screen and (min-width: 992px) {
+        font-size: 1.25rem;
+        padding: 0 20rem;
+      }
     }
     button {
       margin-top: 20px !important;
