--- a/src/components/landing-page/section-three/SectionThree.module.scss
+++ b/src/components/landing-page/section-three/SectionThree.module.scss
@@ -14,18 +14,34 @@
 
 // using the BEM system
 .container {
-  //   border: 1px solid red;
   width: 100%;
   max-width: 600px;
   margin: auto;
   padding: 0 1.25rem;
 }
 
+.img {
+  @include img_fluid;
+}
+
+.float_icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1.5rem;
+  width: 1.5rem;
+
+  @media screen and (min-width: 992px) {
+    margin: 3rem;
+    width: initial;
+  }
+}
+
 .main {
-  // min-height: 31.48vh;
-  background: rgba(249, 247, 255, 1);
+  position: relative;
   @media (min-width: 900px) {
     display: flex;
+    align-items: center;
     padding: 10rem 0;
   }
 
@@ -34,256 +50,12 @@
     .section__three_title {
       font-size: 1.56rem;
       margin-bottom: 1rem;
+      @media (min-width: 992px) {
+        font-size: 48px;
+      }
     }
     .section__three_subtitle {
       line-height: 180%;
     }
   }
-
-  &__tick {
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 5rem 0;
-    @media (min-width: 900px) {
-      //   width: 50%;
-      max-height: 42.42vh;
-      align-items: flex-start;
-      //   padding: 90px 60px 20px 60px;
-      margin: 0;
-    }
-    &__tickSub {
-      display: flex;
-      justify-content: center;
-      align-items: center;
-
-      h4 {
-        font-weight: 800;
-        font-size: 1.3rem;
-        line-height: 2rem;
-        margin-left: 5px;
-      }
-
-      @media (min-width: 700px) {
-        justify-content: flex-start;
-      }
-    }
-
-    &__download {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      margin-top: 10px;
-
-      h5 {
-        text-align: center;
-        font-size: 1.5rem;
-        font-weight: 700;
-        line-height: 160%;
-        margin: 2rem 0;
-        @media (min-width: 900px) {
-          text-align: justify;
-        }
-      }
-      p {
-        text-align: center;
-        font-weight: 400;
-        line-height: 180%;
-        @media (min-width: 900px) {
-          text-align: justify;
-        }
-      }
-    }
-
-    &__image {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-      @media (min-width: 900px) {
-        flex-direction: row;
-      }
-    }
-  }
-
-  &__phone {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .main__phone_box {
-    // border: 1px solid red;
-    width: 100%;
-    // height: 50%;
-
-    img {
-      @include img_fluid;
-    }
-  }
 }
-
-// @import "../../../scss/variables";
-
-// // ===================
-// // MIXINS
-// // ===================
-// @mixin img_fluid {
-//   width: 100%;
-//   height: 100%;
-//   object-fit: cover;
-// }
-// // ====================
-// // END OF MIXINS
-// // ====================
-
-// // using the BEM system
-// @mixin container {
-//   width: 100%;
-//   max-width: 600px;
-//   margin: auto;
-//   padding: 0 1.25rem;
-// }
-
-// .flex_container {
-//   display: flex;
-//   align-items: center;
-//   //   gap: 10rem;
-// }
-
-// p {
-//   color: $blackText;
-// }
-
-// .section__three {
-//   display: flex;
-//   flex-direction: column;
-//   justify-content: end;
-//   background: rgba(249, 247, 255, 1);
-
-//   .section__three_howitworks {
-//     flex: 1;
-
-//     header {
-//       margin: 4.25rem 1.25rem;
-//       .section__three_title {
-//         font-size: 1.56rem;
-//         margin-bottom: 1rem;
-//       }
-//       .section__three_subtitle {
-//         line-height: 180%;
-//       }
-//     }
-//   }
-
-//   .section__three_img_wrapper {
-//     flex: 1;
-//     img {
-//       @include img_fluid;
-//     }
-//   }
-// }
-
-// // Large devices (desktops, 768px and up)
-// @media (min-width: 768px) {
-//   .section__three {
-//     .section__three_howitworks {
-//       border: 1px solid red;
-//       @include container;
-//       // flex: 1;
-//       header {
-//         margin: 4.25rem 0;
-//         .section__three_title {
-//           font-size: 1.56rem;
-//           margin-bottom: 1rem;
-//         }
-//         .section__three_subtitle {
-//           line-height: 180%;
-//         }
-//       }
-//     }
-
-//     .section__three_img_wrapper {
-//       img {
-//         @include img_fluid;
-//       }
-//     }
-//   }
-// }
-// // Large devices (desktops, 992px and up)
-// @media (min-width: 992px) {
-//   .section__three {
-//     flex-direction: row;
-//     align-items: center;
-//     height: 883px;
-
-//     .section__three_howitworks {
-//       header {
-//         margin: 0;
-//       }
-//     }
-//     .section__three_img_wrapper {
-//       // flex: 1;
-//       img {
-//         @include img_fluid;
-//       }
-//     }
-//   }
-// }
-
-// // X-Large devices (large desktops, 1200px and up)
-// @media (min-width: 1200px) {
-//   .section__three {
-//     flex-direction: row;
-//     align-items: center;
-//     height: 883px;
-
-//     .section__three_howitworks {
-//       header {
-//         margin: 0;
-//         padding-right: 8rem;
-//       }
-//     }
-//   }
-// }
-
-// // XX-Large devices (larger desktops, 1400px and up)
-// @media screen and (min-width: 1400px) {
-//   .section__three {
-//     flex-direction: row;
-//     align-items: center;
-//     height: 883px;
-
-//     .section__three_howitworks {
-//       margin-left: 8rem;
-//       margin-right: 3rem;
-//       header {
-//         margin: 0;
-//         padding-right: 8rem;
-//         .section__three_title {
-//           font-size: 1.56rem;
-//           margin-bottom: 1rem;
-//         }
-//       }
-
-//       .section__three_img_wrapper {
-//         img {
-//           @include img_fluid;
-//         }
-//       }
-//     }
-//   }
-// }
-// // XXX-Large devices (larger desktops, 1700px and up)
-// @media screen and (min-width: 1700px) {
-//   .section__three {
-//     .section__three_img_wrapper {
-//       flex: initial;
-//       img {
-//         @include img_fluid;
-//       }
-//     }
-//   }
-// }
