--- a/src/components/landing-page/why-ticked/whyticked.module.scss
+++ b/src/components/landing-page/why-ticked/whyticked.module.scss
@@ -31,9 +31,12 @@ p {
 .section__four_title {
   font-weight: 700;
   line-height: 160%;
-  font-size: 48px;
+  font-size: 24px;
   margin-bottom: 62px;
   text-align: center;
+  @media screen and (min-width: 992px) {
+    font-size: 48px;
+  }
 
   .section__four_task {
     color: $accentOrange;
