--- a/src/components/landing-page/why-ticked/whytickedbox.module.scss
+++ b/src/components/landing-page/why-ticked/whytickedbox.module.scss
@@ -1,7 +1,7 @@
 .whytickedbox {
   width: 100%;
   height: 295px;
-  background-color: rgba(233, 243, 245, 1);
+  background-color: rgba(233, 243, 245, 0.5);
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -14,12 +14,19 @@
   // }
 
   .whytickedbox__header {
-    font-size: 20px;
+    font-size: 1rem;
     font-weight: 700;
     margin-bottom: 24px;
+    @media screen and (min-width: 992px) {
+      font-size: 20px;
+    }
   }
 
   .whytickedbox__desc {
+    font-size: 14px;
     line-height: 180%;
+    @media screen and (min-width: 992px) {
+      font-size: 1rem;
+    }
   }
 }
