--- a/src/core/todo/NewTask.module.scss
+++ b/src/core/todo/NewTask.module.scss
@@ -1,14 +1,3 @@
-// @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
-// THIS IS THE FONT BREAKER=============================
-
-// *{
-//   padding: 0;
-//   margin: 0;
-//   box-sizing: border-box;
-//   font-family: 'opensans';
-// }
-
-// =====================================================
 
 // Website variables
 $bgColor: #F6FAFB;
@@ -18,39 +7,37 @@ $textLightgrey: #707070;
 $textLightMode: #E9F3F5;
 $btnPurple: #714DD9;
 
-  .newTaskBody{
-    font-family: 'Open Sans', sans-serif;
-    background-color: $bgColor;
-    color: $textDarkgrey;
-    font-size: .8rem;
+.newTaskBody{
+        background-color: $bgColor;
+        color: $textDarkgrey;
+        font-size: .8rem;
 
+        // flex main body
+        .newTaskContainer{
+          display: flex;
 
-   .newTaskContainer{
+          .mainContainer{
 
-      display: flex;
-
-      .mainContainer{
-
-        // header
-        .newTaskHeader{
-          width: 80vw;
-          padding: 1rem 2rem 0 3rem;
-          border-bottom: 1px solid $textLightMode;
+          // header
+          .newTaskHeader{
+            width: 80vw;
+            padding: 1rem 0 0 1rem;
+            border-bottom: 1px solid $textLightMode;
 
           .newTaskTitle{
             display: inline-block;
+            font-size: 1rem;
             padding-bottom: 1rem;
-            border-bottom: 4px solid $btnPurple;
+            border-bottom: 2px solid $btnPurple;
           }
         }
 
-        // form
+      // form
         .newTaskForm{
-          width: 60vw;
-          padding: 3rem;
+          padding: 1rem;
           display: flex;
           flex-direction: column;
-          row-gap: 2rem;
+          row-gap: 1rem;
 
           .formGroup{
             display: flex;
@@ -65,7 +52,7 @@ $btnPurple: #714DD9;
             }
 
             // inputs
-            .newTaskInput, .newTaskSelect{
+            .newTaskInput{
               padding: .8rem;
               border-radius: 10px;
               border: 1px solid $textLightMode;
@@ -90,41 +77,11 @@ $btnPurple: #714DD9;
               padding: .8rem;
               color: $textLightgrey;
             }
-
-            // select
-            .repeat, .select{
-              width: 20vw;
-            }
-
-            .optionsContainer {
-              list-style: none;
-              display: flex;
-              flex-direction: column;
-              gap: 1rem;
-              padding: .8rem;
-              background-color: $bgWhite;
-              width: 20vw;
-              font-size: 13px;
-              color: $textLightgrey;
-
-              .newTaskListItem:hover{
-                color: $btnPurple;
-              }
-
-              .newTaskListItem:not(.lastchild){
-                border-bottom: 0.5px solid $textLightgrey;
-                padding-bottom: .8rem;
-              }
-
-              .isDropped{
-                transition: all 8s ease-in-out;
-              }
-            }
-
+        
             // label
             .newTaskLabel{
               font-weight: 600;
-              margin-bottom: .5rem;
+              // margin-bottom: .5rem;
             }
           }
 
@@ -137,71 +94,63 @@ $btnPurple: #714DD9;
             }
           }
 
-          .row{
+          .newTaskRow{
             display: flex;
-            flex-direction: row;
-            column-gap: 3rem;
-
-            .formGroup{
-              width: 50%;
-            }
-
-            .newTaskInput, .newTaskSelect{
-              width: 100%;
-            }
+            flex-direction: column;
+            row-gap: 1rem;
           }
 
+          .newTaskInputRadio{
+            accent-color: $btnPurple;
+            }
+
+            .formSelect{
+              margin: .5rem 0 1rem 0;
+            }
+
           .newTaskButton{
-            width: 20vw;
-            padding: 1rem;
+            padding: .5rem;
             border-radius: 10px;
             background-color: $btnPurple;
             color: $textLightMode;
             outline: none;
             border: none;
+
           }
         }
-
-      }
-   }
-  }
-
-
-@media screen and (max-width: 769px){
-    .newTaskContainer{
-
-      .mainContainer{
-
-        .newTaskHeader{
-          font-size: .7rem;
-        }
-
-        .newTaskForm{
-          width: 80vw !important;
-
-          .row{
-            flex-direction: column !important;
-
-            .formGroup:first-child{
-              width: 100% !important;
-              margin-bottom: 2rem;
-            }
-
-            .formGroup{
-              width: 100% !important;
-            }
-          }
-
-          .newTaskButton{
-            width: 30vw !important;
-          }
-        }
-
-        // select
-        .repeat, .select, .optionsContainer{
-          width: 100% !important;
-        }
-
       }
     }
-}
+
+    } // end main body
+
+    @media screen and (min-width: 769px){
+
+      .newTaskForm{
+        padding-top: 2rem !important;
+
+        .formSelect{
+          margin: 1rem 0;
+          width: 25vw;
+        }
+        
+      .newTaskRow{
+            flex-direction: row !important;
+            column-gap: 3rem;
+
+            .formGroup{
+                width: 50%;
+           }
+      }
+
+      .newTaskButton{
+        width: 20vw;
+        margin-top: 1rem;
+      }
+    }
+    }
+
+    @media screen and (min-width: 969px){
+      .newTaskForm{
+        padding-right: 20vw !important;
+      }
+    }
