Reset Password and New Password Bug fixes

--- a/src/components/resetPassword and newPassword pages/ResetPassword.module.scss
+++ b/src/components/resetPassword and newPassword pages/ResetPassword.module.scss
@@ -11,6 +11,34 @@
   position: absolute;
   top: 1rem;
 }
+
+.invalid {
+  // all: unset;
+  margin-top: 5rem;
+  width: 100%;
+  padding: 0.875rem;
+  border-radius: 0.3rem;
+  color: white;
+  background-color: #d3d0d9;
+  border: none;
+  font-weight: bold;
+  
+}
+.white{
+  color: white;
+}
+
+.valid {
+  // all: unset;
+  margin-top: 5rem;
+  width: 100%;
+  padding: 0.875rem;
+  border-radius: 0.3rem;
+  color: white;
+  background-color: #714DD9;
+  border: none;
+  font-weight: bold;
+}
 .content {
   background-color: #f6fafb;
   padding: 2.5rem 4rem;
@@ -31,71 +59,31 @@
     margin-bottom: 2.5rem;
   }
 
-  button {
-    // all: unset;
-    margin-top: 5rem;
-    width: 100%;
-    padding: 0.875rem;
-    border-radius: 0.3rem;
-    color: white;
-    background-color: #d3d0d9;
-    border: none;
-    font-weight: bold;
-  }
 }
 
-.inputInvalid {
-  box-sizing: border-box !important;
-  border-radius: 0.75rem;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: 1rem;
-  border: 2px solid #db0004;
-  input {
-    outline: none;
-    padding: 0 !important;
-    margin: 0 !important;
-    background-color: transparent;
-    border: 0;
-    width: 100% !important;
-  }
 
-  img {
-    margin-right: 1rem;
-  }
-}
+
 
 .inputDiv {
-  // box-sizing: border-box !important;
-  // border-radius: 0.75rem;
-  // border: 1px solid #d3d0d9;
-  // background-color: white;
-  // display: flex;
-  // justify-content: space-between;
-  // align-items: center;
-  // padding: 1rem;
-
-  img {
-    margin-right: 1rem;
-  }
-
-  input {
-    width: 100%;
-    // padding: 1rem;
-
-    // outline: none;
-    // padding: 0 !important;
-    // margin: 0 !important;
-    // background-color: transparent;
-    // border: 0;
-    // width: auto !important;
-  }
-}
-
-.input {
   color: #707070;
+  position: relative;
+
+  .inputEmail{
+    border:1px solid #714DD9;
+    & + img{
+      position: absolute;
+      right: 1rem;
+      bottom: 1rem;
+    }
+  }
+  .inputInvalid{
+    border:1px solid #db0004;
+    & + img{
+      position: absolute;
+      right: 1rem;
+      bottom: 1rem;
+    }
+  }
 
   label {
     font-size: 0.75rem;
@@ -104,32 +92,22 @@
     margin-bottom: 0.5rem;
   }
 
-  span.red {
-    color: #db0004;
-    font-size: 0.75rem;
-  }
-  span.green {
-    color: #52c41a;
-    font-size: 0.75rem;
-  }
+}
+.red {
+  color: #db0004;
+  font-size: 0.75rem;
+}
+.green {
+  color: #52c41a;
+  font-size: 0.75rem;
 }
 
-.side {
-  display: none;
-  background-image: url("https://res.cloudinary.com/dakoc3xxc/image/upload/v1668792050/macbook-mockup_ngcf3v.png");
-  background-size: 95% auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position-x: right;
-}
+
+
 
 @media screen and (max-width: 750px) {
   .container {
     display: block;
-
-    .side {
-      display: none;
-    }
   }
 
   .content {
