--- a/src/components/resetPassword and newPassword pages/NewPassword.module.scss
+++ b/src/components/resetPassword and newPassword pages/NewPassword.module.scss
@@ -1,26 +1,46 @@
 .container {
-
   background-color: #f6fafb;
   display: flex;
   justify-content: center;
   min-height: 100vh;
-  // display: grid;
-  // grid-template-columns: 50% 50%;
+  //   display: grid;
+  //   grid-template-columns: 50% 50%;
 }
 
 .content > img {
   position: absolute;
   top: 1rem;
 }
+
+.invalid {
+  // all: unset;
+  margin-top: 5rem;
+  width: 100%;
+  padding: 0.875rem;
+  border-radius: 0.3rem;
+  color: white;
+  background-color: #d3d0d9;
+  border: none;
+  font-weight: bold;
+}
+
+.valid {
+  // all: unset;
+  margin-top: 5rem;
+  width: 100%;
+  padding: 0.875rem;
+  border-radius: 0.3rem;
+  color: white;
+  background-color: #714DD9;
+  border: none;
+  font-weight: bold;
+}
 .content {
   background-color: #f6fafb;
-  padding: 2.5rem 5rem;
+  padding: 2.5rem 4rem;
   color: #333333;
   position: relative;
   width: 50%;
-
-  // max-width: ;
-  // border: 1px solid red;
 
   h1 {
     text-align: center;
@@ -35,94 +55,32 @@
     margin-bottom: 2.5rem;
   }
 
-  
 }
 
-button.valid {
-  // all: unset;
-  margin-top: 5rem;
-  width: 100%;
-  padding: 0.875rem;
-  border-radius: 0.3rem;
-  color: white;
-  background-color: #d3d0d9;
-  border: none;
-  font-weight: bold;
-}
 
-button.invalid {
-  // all: unset;
-  margin-top: 5rem;
-  width: 100%;
-  padding: 0.875rem;
-  border-radius: 0.3rem;
-  color: white;
-  background-color: #714DD9;
-  border: none;
-  font-weight: bold;
-}
 
-.inputInvalid {
-  box-sizing: border-box !important;
-  border-radius: 0.75rem;
- 
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: auto 1rem;
-  border: 2px solid #db0004;
 
-  img{
-    margin-right: 1rem  ;
-  }
-
- 
-
-  input {
-    width: 100%;
-    outline: none;
-    padding: .5 !important;
-    margin: 0 !important;
-    background-color: transparent;
-    border: 0;
-    width: auto !important;
-  }
- 
-}
-
-.inputDiv{
-  box-sizing: border-box !important;
-  border-radius: 0.75rem;
-  border: 1px solid #d3d0d9;
-  background-color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  padding: auto 1rem;
-
-  
-  img{
-    margin-right: 1rem  ;
-  }
-
- 
-
-  input {
-    width: 100%;
-  
-    outline: none;
-    padding: .5 !important;
-    margin: 0 !important;
-    background-color: transparent;
-    border: 0;
-    // width: auto !important;
-  }
-}
-
-.input {
+.inputDiv {
   color: #707070;
-  margin-top: 1em;
+  position: relative;
+  
+
+  .inputEmail{
+    border:1px solid #714DD9;
+    & + img{
+      position: absolute;
+      right: 1rem;
+      bottom: 1rem;
+    }
+  }
+  .inputInvalid{
+    border:1px solid #db0004;
+    & + img{
+      position: absolute;
+      right: 1rem;
+      bottom: 1rem;
+    }
+  }
 
   label {
     font-size: 0.75rem;
@@ -131,33 +89,22 @@ button.invalid {
     margin-bottom: 0.5rem;
   }
 
-  span.red {
-    color: #db0004;
-    font-size: 0.75rem;
-  }
-  span.green {
-    color: #52C41A;
-    font-size: 0.75rem;
-  }
+}
+.red {
+  color: #db0004;
+  font-size: 0.75rem;
+}
+.green {
+  color: #52c41a;
+  font-size: 0.75rem;
 }
 
-.side {
 
-  display: none;
-  background-image: url("https://res.cloudinary.com/dakoc3xxc/image/upload/v1668792050/macbook-mockup_ngcf3v.png");
-  background-size: 95% auto;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-position-x: right;
-}
+
 
 @media screen and (max-width: 750px) {
   .container {
     display: block;
-
-    .side {
-      display: none;
-    }
   }
 
   .content {
