feat: added new VA section

--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -10,6 +10,9 @@ $white: rgba(255, 255, 255, 1);
 $black: rgba(51, 51, 51, 1);
 $footer: rgba(6, 12, 34, 1);
 
+$line-height-md: 160%;
+$line-height-lg: 180%;
+
 $activeColor: $activeColor-light;
 $blackText: $blackText-light;
 $accentOrange: $accentOrange-light;
