--- a/src/scss/_mixins.scss
+++ b/src/scss/_mixins.scss
@@ -17,9 +17,13 @@
   font-weight: 600;
 }
 
-
 @mixin container {
   max-width: 1340px;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 1rem;
+}
+@mixin container-fluid {
   width: 100%;
   margin: 0 auto;
   padding: 0 1rem;
